# py_app_docker

./: Dockerfile  README.md  pyproject.toml
terraform/: main.tf
