[project]
name = "py-app-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "Andy Miles",email = "akmiles@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)"
]

[tool.poetry]
packages = [{include = "py_app_docker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
